[tool.poetry]
name = "sql_metadata"
version = "2.20.0"
license="MIT"
description = "Uses tokenized query returned by python-sqlparse and generates query metadata"
authors = ["Maciej Brencz <maciej.brencz@gmail.com>", "Radosław Drążkiewicz <collerek@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/macbre/sql-metadata"
repository = "https://github.com/macbre/sql-metadata"

packages = [
    { include="sql_metadata" }
]

[tool.poetry.dependencies]
python = "^3.10"
sqlparse = ">=0.4.1,<0.6.0"
sqlglot = "^30.0.3"

[tool.poetry.group.dev.dependencies]
coverage = {extras = ["toml"], version = "^7.13"}
pytest = "^9.0.2"
pytest-cov = "^7.1.0"
ruff = "^0.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I"]

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.coverage.run]
relative_files = true

[tool.coverage.report]
show_missing = true
fail_under = 100
