[tool.poetry]
name = "sql_metadata"
version = "3.0.0"
license="MIT"
description = "Uses sqlglot to parse SQL queries and extract metadata"
authors = ["Maciej Brencz <maciej.brencz@gmail.com>", "Radosław Drążkiewicz <collerek@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/macbre/sql-metadata"
repository = "https://github.com/macbre/sql-metadata"

packages = [
    { include="sql_metadata" }
]

[tool.poetry.dependencies]
python = "^3.10"
sqlglot = "^30.7.0"

[tool.poetry.group.dev.dependencies]
coverage = {extras = ["toml"], version = "^7.13"}
pytest = "^9.0.3"
pytest-cov = "^7.1.0"
ruff = "^0.15"
mypy = "^2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I"]

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true

[tool.coverage.run]
relative_files = true

[tool.coverage.report]
show_missing = true
fail_under = 100
